--- a/index.html
+++ b/index.html
@@ -10,5 +10,56 @@
 			src="https://kit.fontawesome.com/e3bd443a68.js"
 			crossorigin="anonymous"></script>
 	</head>
-	<body></body>
+	<body>
+
+        <nav>
+            <ul class="menu">
+                <li class="menu-item">
+                    nav 1
+                    <ul class="dropdown">
+                        <li>Link nr 1</li>
+                        <li>Link nr 2</li>
+                        <li>Link nr 3</li>
+                        <li>Link nr 4</li>
+                        <li>Link nr 5</li>
+                        <li>Link nr 6</li>
+                    </ul>
+                </li>
+                <li class="menu-item two">
+                    nav 2
+                    <ul class="dropdown">
+                        <li>Link nr 1</li>
+                        <li>Link nr 2</li>
+                        <li>Link nr 3</li>
+                        <li>Link nr 4</li>
+                        <li>Link nr 5</li>
+                        <li>Link nr 6</li>
+                    </ul>
+                </li>
+                <li class="menu-item three">
+                    nav 3
+                    <ul class="dropdown">
+                        <li>Link nr 1</li>
+                        <li>Link nr 2</li>
+                        <li>Link nr 3</li>
+                        <li>Link nr 4</li>
+                        <li>Link nr 5</li>
+                        <li>Link nr 6</li>
+                    </ul>
+                </li>
+                <li class="menu-item four">
+                    nav 4
+                    <ul class="dropdown">
+                        <li>Link nr 1</li>
+                        <li>Link nr 2</li>
+                        <li>Link nr 3</li>
+                        <li>Link nr 4</li>
+                        <li>Link nr 5</li>
+                        <li>Link nr 6</li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+
+    </body>
 </html>
